<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:ciubex="http://schemas.android.com/apk/res/ro.ciubex.keepscreenlock">

    <PreferenceCategory android:title="@string/general_settings">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/language_labels"
            android:entryValues="@array/language_values"
            android:key="languageCode"
            android:summary="@string/change_language_desc"
            android:title="@string/change_language_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="enableKeepScreenLockService"
            android:summary="@string/enable_locking_screen_desc"
            android:title="@string/enable_locking_screen_title"/>
        <ro.ciubex.keepscreenlock.preference.IntegerEditTextPreference
            android:defaultValue="100"
            android:dependency="enableKeepScreenLockService"
            android:inputType="numberDecimal"
            android:key="lockScreenDelay"
            android:summary="@string/lock_screen_delay_desc_msec"
            android:title="@string/lock_screen_delay_title"
            ciubex:maxValue="3000"
            ciubex:minValue="50"/>
        <Preference
            android:key="proximitySensorState"
            android:persistent="false"
            android:summary="@string/proximity_sensor_state_desc"
            android:title="@string/proximity_sensor_state_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="enableKeepScreenLockService"
            android:key="enableLightSensorListener"
            android:summary="@string/enable_light_sensor_listener_desc_no_value"
            android:title="@string/enable_light_sensor_listener_title"/>
        <ro.ciubex.keepscreenlock.preference.FloatEditTextPreference
            android:defaultValue="10"
            android:dependency="enableLightSensorListener"
            android:inputType="numberDecimal"
            android:key="limitLightSensorValue"
            android:summary="@string/limit_light_sensor_value_desc"
            android:title="@string/limit_light_sensor_value_title"
            ciubex:maxValue="120000"
            ciubex:minValue="0"/>
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="enableKeepScreenLockService"
            android:key="enablePhoneListener"
            android:summary="@string/enable_phone_listener_desc"
            android:title="@string/enable_phone_listener_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="enablePhoneListener"
            android:key="enableWhenHeadset"
            android:summary="@string/check_only_when_headset_desc"
            android:title="@string/check_only_when_headset_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="enablePhoneListener"
            android:key="keepScreenOffIncomingCall"
            android:summary="@string/keep_screen_off_incoming_call_desc"
            android:title="@string/keep_screen_off_incoming_call_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="enableKeepScreenLockService"
            android:key="notificationEnabled"
            android:summary="@string/notification_enabled_desc"
            android:title="@string/notification_enabled_title"/>
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notificationEnabled"
            android:key="notificationAlwaysDismissible"
            android:summary="@string/notification_dismiss_always_desc"
            android:title="@string/notification_dismiss_always_title"/>
        <Preference
            android:key="toggleNotification"
            android:persistent="false"
            android:summary="@string/notification_toggle_desc"
            android:title="@string/notification_toggle_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="otherSettings"
        android:title="@string/other_settings">
        <Preference
            android:dependency="enableKeepScreenLockService"
            android:key="toggleScreenLockShortcut"
            android:persistent="false"
            android:summary="@string/create_screen_lock_shortcut_desc"
            android:title="@string/create_screen_lock_shortcut"/>
        <Preference
            android:key="requestPermissions"
            android:persistent="false"
            android:summary="@string/request_permissions_desc"
            android:title="@string/request_permissions_title"/>
        <Preference
            android:key="keepScreenLockCounter"
            android:persistent="false"
            android:summary="@string/locked_screen_count_desc"
            android:title="@string/locked_screen_count_title"/>
        <EditTextPreference
            android:defaultValue="@string/locked_screen_log_format"
            android:key="screenLockLogsDateTimeFormat"
            android:summary="@string/locked_screen_log_format_desc"
            android:title="@string/locked_screen_log_format_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_section">
        <Preference
            android:key="buildVersion"
            android:persistent="false"
            android:summary="@string/build_version_desc"
            android:title="@string/build_version_title"/>
        <Preference
            android:key="sendDebugReport"
            android:persistent="false"
            android:summary="@string/send_debug_desc"
            android:title="@string/send_debug_title"/>
        <Preference
            android:key="licensePref"
            android:persistent="false"
            android:summary="@string/license_desc"
            android:title="@string/license_title"/>
        <Preference
            android:key="donatePref"
            android:persistent="false"
            android:summary="@string/donate_desc"
            android:title="@string/donate_title"/>
    </PreferenceCategory>

</PreferenceScreen>